--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,12 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
+  "semi": false,
+  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 100,
+  "printWidth": 90,
   "tabWidth": 2,
   "useTabs": false,
   "arrowParens": "always",
   "jsxSingleQuote": false,
   "bracketSpacing": true,
-  "endOfLine": "lf"
+  "endOfLine": "crlf"
 }
